samples/_failures_safe/1761269849_5f1489_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd3401d7.c: In function ‘main’:
./samples/SAFE/__tmp_dd3401d7.c:154:17: error: expected expression at end of input
  154 |                 } else if (
      |                 ^
./samples/SAFE/__tmp_dd3401d7.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dd3401d7.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dd3401d7.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dd3401d7.c:154:17: error: expected declaration or statement at end of input
